# SPPM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
core/: Bounds3.hpp  global.hpp
object/: BVH.cpp  HitPoint.hpp  Material.hpp  Triangle.hpp
renderer/: Renderer.cpp  Renderer.hpp
scene/: Scene.cpp
